--- a/NAMESPACE
+++ b/NAMESPACE
@@ -133,7 +133,10 @@ import(Biostrings)
 import(GOSemSim)
 import(doParallel)
 import(foreach)
-importFrom(RCurl,getURLAsynchronous)
+importFrom(curl,new_pool)
+importFrom(httr2,req_perform_parallel)
+importFrom(httr2,request)
+importFrom(httr2,resp_body_string)
 importFrom(methods,as)
 importFrom(rjson,fromJSON)
 importFrom(stats,cmdscale)
